--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack --config ./webpack.config.js",
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot --open"
   },
   "repository": {
     "type": "git",
@@ -28,11 +28,13 @@
     "@types/arcgis-js-api": "^4.2.0",
     "awesome-typescript-loader": "^3.1.2",
     "calcite-web": "github:esri/calcite-web#v1.0.0-rc.2",
+    "can-stache-loader": "git+https://github.com/roemhildtg/can-stache-loader.git",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.4",
     "dojo-typings": "^1.11.6",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.3",
@@ -43,6 +45,9 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "esri-promise": "^0.1.1"
+    "can-event-radiochange": "^0.1.1",
+    "can-stache": "^3.0.27",
+    "esri-promise": "^0.1.1",
+    "spectre-canjs": "^0.30.0"
   }
 }
