--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "file-loader": "^0.10.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.1.6",
